[package]
name = "uniswap_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "1.0.24"
alloy-primitives = "1.3.0"
alloy-signer = "1.0.24"
alloy-sol-types = "1.3.0"
dotenv = "0.15.0"
eyre = "0.6.12"
hex = "0.4.3"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
