[package]
name = "uniswap_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encode_poolkey"
path = "src/bin/encode_poolkey.rs"

[dependencies]
alloy = "1.0.24"
alloy-dyn-abi = "1.3.0"
alloy-primitives = "1.3.0"
alloy-provider = "1.0.24"
alloy-signer = "1.0.24"
alloy-sol-types = "1.3.0"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
eyre = "0.6.12"
hex = "0.4.3"
k256 = "0.13.4"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
